# GN0

./: .gitignore  .gitmodules  INSTALLATION.md  README.md  analyze_results.py  bae_agent.py  bae_agent_base.py  bae_agent_dagger.py  eval_bae.sh  eval_bae_InteriorGS.sh  eval_remote.sh  kill_bae_eval.sh  kill_remote_eval.sh  remote_nav_agent.py  remote_nav_client.py  requirements.txt  run.py  run_remote_eval.py  trajectory_video_collector.py
VLN_CE/: __init__.py
VLN_CE/GN_Bench_extensions/: __init__.py  maps.py  measures.py  task.py
VLN_CE/GN_Bench_extensions/config/: bae_InteriorGS_test_seen.yaml  bae_InteriorGS_test_unseen.yaml  bae_InteriorGS_train_seen.yaml  default.py  vlnce_task_bae_InteriorGS.yaml
VLN_CE/vlnce_baselines/config/: default.py
VLN_CE/vlnce_baselines/config/baselines/: bae_InteriorGS.yaml
bae/: constants.py  inference.py  prompts.py  pyproject.toml
